--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@
 
 
 :root{
-    --main: rgb(134, 186, 9);
-    /* --main: #28a745; */
-    --black: #192a56;
+    /* --main: rgb(134, 186, 9); */
+    --main: #28a745;
+    /* --black: #192a56; */
+    --black: #3f3e3e;
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     
@@ -36,6 +37,7 @@ ul{
 
 body a{
     text-decoration: none;
+    color: var(--black);
   
 }
 
@@ -85,7 +87,7 @@ section{
 }
 
 .titlePage{
-    background: url(../images/home-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/bg-page.jpg);
     min-height: 20rem;
     background-position: center;
     background-size: cover;
@@ -94,13 +96,14 @@ section{
 
 .titlePage h1{
     font-size: 5rem;
-    color: var(--main);
+    /* color: var(--main); */
+    color: #fff;
     font-weight: 900;
 }
 
 .titlePage a,
 .titlePage .link{
-    color: #666;
+    color: #eee;
     font-size: 2rem;
 }
 
@@ -821,7 +824,8 @@ header .icons #menu-bars{
 }
 
 
-.products .product-container .sort{
+.products .product-container .sort,
+body ._order .sort{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -829,17 +833,20 @@ header .icons #menu-bars{
     padding: 1rem 1.5rem;
 }
 
-.products .product-container .sort select{
+.products .product-container .sort select,
+._order .sort select{
     background: white;
     padding: 1rem;
     width: 20rem;
     font-size: 1.5rem;
 }
 
-.products .product-container .sort option{
+.products .product-container .sort option,
+._order .sort option{
     width: 100px;
 }
-.products .product-container .sort select:first-child{
+.products .product-container .sort select:first-child,
+._order .sort select:first-child{
     margin-right: 1.2rem;
 }
 
@@ -1139,9 +1146,9 @@ header .icons #menu-bars{
     border-collapse: collapse;
 }
 
-.cart-container table tr{
-    /* border-bottom: .1rem solid rgb(204, 204, 204); */
-}
+/* .cart-container table tr{
+    border-bottom: .1rem solid rgb(204, 204, 204); 
+} */
 
 
 .cart-container table .cart-info{
@@ -1481,7 +1488,313 @@ header .icons #menu-bars{
 }
 
 
+/* ****************** Order Manage Page *************************** */
 
+._order .order-container .box{
+    /* padding: 1rem 2rem; */
+   
+    border-radius: .5rem;
+}
+
+._order .order-container .box table{
+    width: 100%;
+    /* padding: 10rem;
+     */
+}
+ 
+ .order-container table th{
+    font-size: 2rem;
+    color:var(--black);
+    padding: .5rem 0rem;
+}
+
+._order .order-container table tr:first-child{
+    border-bottom: .5rem solid #ececec;
+    
+}
+
+.order-container table td{
+    font-size: 1.8rem;
+    color: #555;
+    padding: 1rem 0;
+}
+
+.order-container table img{
+    width: 100%;
+    max-width: 8rem;
+}
+
+.order-container table a{
+    color: var(--black);
+    font-size: 2rem;
+    padding: 0rem .5rem;
+}
+.order-container table a:hover{
+    color:var(--main);
+}
+
+.order-container .total{
+    color: var(--main);
+    font-weight: 500;
+}
+
+/* navigation css */
+.order-container .navigation ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    padding: 1rem;
+}
+
+.order-container .navigation a{
+    /* border: .1rem solid var(--black); */
+    padding: .5rem 1.5rem;
+    color:var(--light-color);
+}
+
+.order-container .navigation a:hover{
+    /* border: .1rem solid var(--main); */
+    color:var(--main);
+}
+
+._order>a{
+    border-radius: 0;
+    font-size: 1.5rem;
+    color:#192a56;
+    border-color: #192a56;
+}
+._order>a:hover{
+    border-color: var(--main);
+}
+
+._order .search-box input{
+    font-size: 1.5rem;
+    width: 100%;
+    padding-right: 4rem;
+    color: var(--black);
+}
+
+._order .sort i{
+    position: absolute;
+    right: 2rem;
+    font-size: 2rem;
+    color: var(--black);
+}
+
+
+/* ****************** Order Detail Page CSS ************************ */
+
+.orderDetail-container form{
+  /* background-color: #ececec; */
+  box-shadow: var(--box-shadow);
+    padding: 1rem;
+}
+
+.orderDetail-container form input,
+.orderDetail-container form textarea{
+    font-size: 1.6rem;
+    border: .1rem solid #ececec;
+    resize: none;
+    text-transform: none;
+}
+
+.orderDetail-container form input:last-child{
+    color:var(--main);
+    font-weight: 600;
+}
+.orderDetail-container form input:focus,
+.orderDetail-container form textarea:focus{
+    outline: none;
+    box-shadow:none !important;
+    border:.1rem solid #ccc !important;
+
+}
+.orderDetail-container form label{
+    font-size: 1.6rem;
+    font-weight: 500;
+    text-transform: none;
+    padding: 1rem 0rem 0rem 0rem;
+}
+
+/* Table  */
+.orderDetail-container table td:first-child{
+    max-width: 2.5rem;
+}
+.orderDetail-container table th{
+    border-bottom: .5rem solid #eaeaea;
+}
+
+.orderDetail-container table th,
+.orderDetail-container table td{
+    font-size: 1.7rem;
+    height: 2rem;
+    padding: 1rem;
+}
+.orderDetail-container table td h4{
+    text-transform: none;
+}
+
+.orderDetail-container table td img{
+    width: 100%;
+    max-width: 8rem;
+}
+
+._orderDetail>a{
+    border-radius: 0;
+    font-size: 1.5rem;
+}
+
+
+/* ****************** Login Page CSS *************************** */
+body ._login{
+    margin-top: 500rem;
+  
+}
+
+.login-container{
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+}
+
+.login-container .box{
+    flex:1 1 40rem;
+    padding: 2rem;
+    position: relative;
+    
+}
+
+.login-container .box .register_link{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    
+}
+
+.login-container .box img{
+    width: 100%;
+    max-height: 60rem;
+    object-fit: cover;
+    background-color: #28a745;
+    /* filter: blur(.5rem); */
+    filter: brightness(50%);
+}
+
+.login-container .register_link h1{
+    font-size: 3.5rem;
+    color: #fff;
+    font-weight: 800;
+    /* text-shadow: 1px 6px 8px #292929; */
+}
+
+.login-container .register_link p{
+    color:#fff;
+    font-size: 1.5rem;
+    text-transform: none;
+}
+
+.login-container .register_link a{
+    font-size: 1.5rem;
+    border-radius: 0;
+}
+
+
+.login-container .box form {
+    position: absolute;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* .login-container .box:last-child{
+    background-color: #28a745;
+} */
+
+body ._login {
+    margin-top: 6rem;
+    margin-bottom: 4rem;
+}
+
+.title_login{
+    width: 100%;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.title_login h1{
+    font-weight: 900;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+
+.login-container .box form input[type="text"],
+.login-container .box form input[type="password"],
+.login-container .box form input[type="email"]{
+    font-size: 1.5rem;
+    padding: 1rem 1rem;
+    border-bottom: .1rem solid #acaaaa;
+    margin-top: 3rem;
+}
+
+.login-container .box form input:focus{
+    outline: none;
+    box-shadow:none !important;
+    
+    /* border:.1rem solid #ccc !important; */
+}
+
+.login-container .box form input[type="checkbox"]{
+    font-size: 1.5rem;
+    padding:1rem 1rem;
+    /* margin-left: .5rem; */
+    margin-right: 1rem;
+   
+}
+
+.login-container .box form input[type="checkbox"]:checked{
+    background-color: var(--main); 
+    border-color: var(--main); 
+  
+    outline: none;
+    box-shadow:none !important;
+}
+
+.login-container .box .form-check label{
+    font-weight: normal;
+    font-size: 1.5rem;
+    line-height: 2;
+}
+
+
+
+.login-container .box form label{
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+
+.login-container .box form .btn{
+    width: 100%;
+}
+
+
+.login-container .box form  a{
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    text-transform: none;
+    color: var(--light-color);
+}
+.login-container .box form  a:hover{
+    color: var(--main);
+}
 
 
 
