--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,18 @@
     --black: #3f3e3e;
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
-    
+    --danger:  #F32013;
+
 }
 
 body a:hover{
     text-decoration: none;
 }
+
+body table{
+    border-collapse: none;
+}
+
 
 *{
     font-family: 'Roboto', sans-serif;
@@ -50,6 +56,47 @@ input:focus{
      outline: none;
   
     /* border:0px solid #ccc !important; */
+}
+
+.quantity-container{
+    /* background: var(--main); */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top:50%;
+    left: 50%;
+    display: flex;
+    box-shadow: var(--box-shadow);
+}
+.quantity-container input[type="number"]{
+    -moz-appearance: textfield;
+    text-align: center;
+    width: 50%;
+    font-size: 1.5rem;
+    border: none;
+    background-color: #ffffff;
+    color: #202030;
+}
+
+.quantity-container input::-webkit-outer-spin-button,
+.quantity-container input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin:0;
+}
+
+
+.quantity-container button{
+    color: var(--main);
+    background-color:#fff ;
+    border: none;
+    cursor: pointer;
+    font-size: 2.2rem;
+}
+
+#decrement{
+    padding:0 .5rem;
+}
+#increment{
+    padding:0 .5rem;
 }
 
 body a:hover{
@@ -264,7 +311,7 @@ header .nav{
     background: #fff;
     position: relative;
     /* box-shadow: var(--box-shadow); */
-  
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 header .nav.fix-nav{
@@ -299,6 +346,11 @@ header .navbar .active,
 header .navbar a:hover{
     color: #fff;
     background: var(--main);
+}
+
+header .icons{
+    display: flex;
+    align-items: center;
 }
 
 header .icons>i,
@@ -403,6 +455,17 @@ header .icons>li:hover{
 header .icons #menu-bars{
     display: none;
 }
+
+header .icons>._username{
+    white-space: nowrap; 
+    width: 8.5rem; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    font-size: 1.7rem;
+    font-weight: 450;
+    margin-left: .2rem;
+}
+
 
 /* banner section css */
 .banner{
@@ -597,6 +660,7 @@ header .icons #menu-bars{
     padding: 2rem;
     /* border: .1rem solid rgba(0,0,0,.2); */
     box-shadow: 0 1px 3px -2px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);;
+    align-items: center;
     border-radius: .7rem;
     max-width: 25rem;
     overflow: hidden;
@@ -605,32 +669,39 @@ header .icons #menu-bars{
 
 .product_container .box_container .box  img{
     height: 20rem;
+    object-fit: cover;
+    max-width: 20rem;
+    z-index: 100;
+    transition: transform 1s ease;
 }
 
 .product_container .box_container .box .discount{
     position: absolute;
     top: 1rem; left: 1rem;
-    background: rgba(134, 186, 9,.1);
-    color: var(--black);
-    padding: .7rem 1rem;
+    background: var(--main);
+    color: #fff;
+    padding: .5rem 1rem;
     font-size: 2rem;
 }
 
 .product_container .box_container .box .icons{
     position: absolute;
     top: .5rem; right: -6rem;
+  
 }
 
 
 
 .product_container .box_container .box:hover .icons{
     right: 1rem;
-   
+    z-index: 100;
 }
 
 .product_container .box_container .box:hover{
-    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 22%), 0 1px 2px rgb(0 0 0 / 40%);
-
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+.product_container .box_container .box:hover img{
+    transform: scale(.7);
 }
 
 .product_container .box_container .box .icons a{
@@ -643,6 +714,7 @@ header .icons #menu-bars{
     background: rgba(231, 231, 231, 0.8);
     border-radius: 50%;
     margin-top: .7rem;
+    
 }
 
 /* option 2 */
@@ -673,6 +745,7 @@ header .icons #menu-bars{
 
 .product_container .box_container .box:hover .icons2{
     left: 0;
+    z-index: 100;
 }
 
 
@@ -680,12 +753,21 @@ header .icons #menu-bars{
     background: var(--main);
     color: #fff;
 }
-
+.product_container .box_container .box .product_name{
+    white-space: nowrap; 
+    width: 100%; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    font-size: 2.2rem;
+  
+    font-weight: bolder;
+}
 
 .product_container .box_container .box h3 a{
     color: var(--black);
     font-size: 2.2rem;
     font-weight: bolder;
+    
 }
 .product_container .box_container .box h3 a:hover{
     color: var(--main);
@@ -712,6 +794,7 @@ header .icons #menu-bars{
     color: #999;
     text-decoration: line-through;
     text-transform: none;
+  
 }
 
 
@@ -1292,169 +1375,159 @@ body ._order .sort{
 
 
 /* ********************** Cart Page Css *****************************/
-.cart-container{
-    max-width: 1080px;
-    margin:auto;
-    padding-left:25px;
-    padding-right: 25px;
-   
-}
-
-
-
-
-.cart-container table{
-    width: 100%;
+/* 
+body table{
     border-collapse: collapse;
-}
-
-/* .cart-container table tr{
-    border-bottom: .1rem solid rgb(204, 204, 204); 
 } */
-
-
-.cart-container table .cart-info{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem;
+.cart-container{
+    margin-top: 5rem;
 }
 
-.cart-container table .cart-info p{
-    display: block;
-    margin: 0;
-    font-weight: 500;
-    font-size: 1.7rem;
-    text-transform: none;
+body .cart-container table {
+    padding: 2rem;
+    border-collapse: collapse;
+    width: 100%;
     
 }
-
-.cart-container table tr td span{
-    font-size: 1.8rem;
-    font-weight: 400;
-    margin-left: 1rem;
-    color:var(--black);
+.cart-container .box  th{
+    font-size: 1.6rem;
+    padding: .8rem 1rem;
+    color:#fff;
+    background: var(--main);
+    border-bottom: .3rem solid #ececec;
 }
 
-.cart-container table th,
-.total-price th{
-    text-align: left;
-    padding: 0.5rem .5rem;
-    color: var(--black);
-    font-size: 2rem;
-    /* background: var(--main); */
-    font-weight: bolder;
-    border-bottom: .5rem solid #ececec;
-}
-
-/* .cart-container .table td, */
-.total-price td{
-    padding: 2rem 1rem;  
-   
-}
-
-.cart-container table td input{
-    width: 5.2rem;
-    height: 4rem;
-    padding: .5rem;
+.cart-container .box  td{
     font-size: 1.5rem;
-    border: .1rem solid #666;
-    margin-left: 2rem;
+    padding: 1rem 1rem;
+    border-bottom: .1rem solid #ececec;
+    position: relative;
 }
 
-.cart-container .cart-info a{
-    color: #FF2300;
+.product-info{
+    display: flex;    
+    align-items: center;
+    flex-wrap: wrap;  
+    text-transform: none;
+}
+
+ .product-info img{
+    max-width: 5rem;
+    height: 5rem;
+    object-fit: cover;
+}
+
+.product-info h3{
+    font-size: 1.5rem;
+    color: #333;
+}
+
+.product-info span{
+    text-transform: none;
     font-size: 1.4rem;
 }
-.cart-container .cart-info small{
-    /* color: var(--main); */
+
+table ._amount{
+    color: var(--main);
+    font-weight: 550;
+}
+.cart-container .box td:last-child a{
+    font-size: 2rem;
+}
+
+.product-info .product_name{
+    white-space: nowrap; 
+    width: 20rem; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
     font-size: 1.5rem;
-    font-weight: 500;
-    text-transform: none;   
-     color: #333;
+    font-weight: 420;
+    text-transform: none;
 }
-
-.cart-container table img{
-    /* width: 7rem; */
-    width: 8rem;
-    height: auto;
-    margin-right: 2rem;
-}
-
-.total-price {
-	display: flex;
-	justify-content: space-between;
-}
-
-.total-price .voucher{
-    margin-top: 3rem;
-}
-
-
-.total-price .voucher h3{
-    font-size: 2.3rem;
-    color: var(--black);
-    font-weight:600;
-}
-
-.total-price .voucher input{
-    padding: .7rem .5rem;
-    font-size: 1.7rem;
-    border: .1rem solid #ececec;
-    color: gray;
+.product-info .product_name a{
     text-transform: none;
 }
 
-.total-price .voucher h3{
-    font-size: 2.3rem;  
-    color: var(--black);
-    font-weight:600;
+.cart-container ._checkout-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
 }
 
-.total-price .voucher a{
-    border-radius: none;
-    font-size: 1rem;
-    background-color: gray;
-    padding: .7rem 1rem;
-    margin-left: 1rem;
+.cart-container ._checkout-container .voucher{
+    padding: 2rem 0rem;
+}
+
+._checkout-container .voucher h4{
+    font-size: 2rem;
+    color: var(--black)
+}
+._checkout-container .voucher .box{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+._checkout-container .voucher input{
+    padding: .6rem 1rem ;
+
+    font-size: 1.5rem;
+    text-transform: none;
+    border: .1rem solid rgb(158, 157, 157);
+}
+
+._checkout-container .voucher button{
+    font-size: 1.2rem;
+    vertical-align: middle;
+    border-radius: 0;
+    margin-top: 0;
+}
+
+._checkout-container .checkout-box{
+    width: 40%;
+    padding: 3rem 0;
+}
+
+._checkout-container .checkout-box table{
+    border-top: .5rem solid var(--main);
+    width: 100%;
+  
+}
+
+
+.checkout-box table th{
     font-size: 1.7rem;
-    color: #fff;
+    padding: 1rem .5rem;
+    /* border-bottom: .1rem solid #ececec; */
 }
 
-.total-price table {
-	border-top: .5rem solid #ececec;
-	width: 100%;
-	max-width: 400px;
-}
-
-.cart-container table th:last-child,
-.cart-container table td:last-child,
-.total-price td:last-child{
+.checkout-box table td{
+    font-size: 1.6rem;
+    font-weight: 410;
     text-align: right;
     text-transform: none;
+    /* border-bottom: .1rem solid #ececec; */
 }
 
-.cart-container table td:last-child{
-    font-size: 1.8rem;
-    font-weight: 600;
+.checkout-box table .total_price{
     color: var(--main);
+    font-size: 2rem;
 }
 
-.total-price td{
-    font-size: 1.8rem;
-    color: var(--black);
-    font-weight: 600;
+.btn_checkout{
+    display: block;
+    margin-top: 1.5rem;
+    background-color: var(--main);
+    color:#fff;
+    font-size: 2rem;
+    text-align: center;
+    padding: .7rem .5rem;
 }
 
-.total-price .total{
-    font-weight: 900;
-    
+.btn_checkout:hover{
+    background-color: #1c7731;
+    color:#fff;
 }
-
- body .total-price table tr td .btn{
-    /* color: var(--main); */
-    width: 100%;
-}
-
 
 /* ************************ Account Page CSS ************************ */
 .account-container{
@@ -1505,6 +1578,8 @@ body ._order .sort{
     font-size: 1.5rem;
     text-transform: none;
 }
+
+
 
 /* ********************** Address Page CSS *********************** */
 
@@ -1665,13 +1740,14 @@ body ._order .sort{
 }
  
  .order-container table th{
-    font-size: 2rem;
+    font-size: 1.8rem;
     color:var(--black);
+    font-weight: 450;
     padding: .5rem 0rem;
 }
 
 ._order .order-container table tr:first-child{
-    border-bottom: .5rem solid #ececec;
+    border-bottom: .3rem solid #ececec;
     
 }
 
@@ -1679,6 +1755,7 @@ body ._order .sort{
     font-size: 1.8rem;
     color: #555;
     padding: 1rem 0;
+    border-bottom: .1rem solid #ececec;
 }
 
 .order-container table img{
@@ -1687,12 +1764,25 @@ body ._order .sort{
 }
 
 .order-container table a{
-    color: var(--black);
-    font-size: 2rem;
-    padding: 0rem .5rem;
+    color: #fff;
+    font-size: 1.2rem;
+    padding: .5rem 1.5rem;
+    font-family: 400;
+    text-transform: lowercase;
+    background-color: var(--main);
+    border-radius: 1rem;
+    cursor: pointer;
 }
-.order-container table a:hover{
-    color:var(--main);
+ 
+.order-container table a:first-child:hover{
+    color:#fff;
+    background-color: #1c7731;
+
+}
+.order-container table .cancel_order:hover{
+    color:#fff;
+    background-color:  #750f0a;
+
 }
 
 .order-container .total{
@@ -1707,16 +1797,19 @@ body ._order .sort{
     align-items: center;
     font-size: 2rem;
     padding: 1rem;
+    margin-top: 2rem;
 }
 
 .order-container .navigation a{
-    /* border: .1rem solid var(--black); */
+    border: .1rem solid #ececec;
     padding: .5rem 1.5rem;
-    color:var(--light-color);
+    color:var(--black);
+    font-size: 1.7rem;
+    
 }
 
 .order-container .navigation a:hover{
-    /* border: .1rem solid var(--main); */
+    border: .1rem solid var(--main);
     color:var(--main);
 }
 
