--- a/css/style.css
+++ b/css/style.css
@@ -85,54 +85,24 @@ body .titlePage-cart .box-text a:hover{
 }
 
 input:focus{
-     outline: none;
-  
+    outline: none;
+    box-shadow:none !important;
+        
     /* border:0px solid #ccc !important; */
 }
 
-.quantity-container{
-    /* background: var(--main); */
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top:50%;
-    left: 50%;
-    display: flex;
-    box-shadow: var(--box-shadow);
-}
-.quantity-container input[type="number"]{
-    -moz-appearance: textfield;
-    text-align: center;
-    width: 50%;
-    font-size: 1.5rem;
-    border: none;
-    background-color: #ffffff;
-    color: #202030;
-}
-
-.quantity-container input::-webkit-outer-spin-button,
-.quantity-container input::-webkit-inner-spin-button{
-    -webkit-appearance: none;
-    margin:0;
-}
-
-
-.quantity-container button{
-    color: var(--main);
-    background-color:#fff ;
-    border: none;
-    cursor: pointer;
-    font-size: 2.2rem;
-}
-
-#decrement{
-    padding:0 .5rem;
-}
-#increment{
-    padding:0 .5rem;
-}
 
 body a:hover{
     color: var(--main);
+}
+
+body .modal .modal-content .modal-header h5{
+    font-size: 2.5rem;
+    
+}
+body .modal .modal-content button{
+    font-size: 1.6rem;
+    border-radius: .5rem;
 }
 
 
@@ -191,7 +161,7 @@ section{
     text-transform: uppercase;
 }
 
-body .btn{
+body ._btn{
     display: inline-block;
     padding: .8rem 3rem;
     background: #fff;
@@ -209,7 +179,7 @@ body .btn{
     /* border: .1rem solid var(-green); */
 }
 
-body .btn::before{
+body ._btn::before{
     content: '';
     position: absolute;
     top:0; right: 0;
@@ -220,13 +190,13 @@ body .btn::before{
     z-index: -1;
 }
 
-body .btn:hover::before{
+body ._btn:hover::before{
     width: 100%;
     left: 0;
    
 }
 
-body .btn:hover{
+body ._btn:hover{
     color: #fff;
 }
 
@@ -1296,294 +1266,7 @@ body ._order .sort{
 }
 
 
-/* ***************** Detail Page CSS ********************* */
-.heading-details{
-    font-size: 2.5rem;
-    color: #fff;
-    margin-bottom: 1.7rem;  
-    text-transform: uppercase; 
-    display: inline-block;
-    background: var(--black);
-    padding: 1rem 3.5rem;
-    margin-top: 10rem;
-}
 
-/* .heading-details span{
-    font-size: 2.5rem;
-    background: var(--main);
-    color: #fff;
-    padding: .5rem;
-    border-radius: .5rem;
-} */
-
-.detail-container{
-    display: flex;
-    gap: 1.5rem;
-    justify-content: center;
-    
-}
-
-
-.detail-container .box{
-    flex: 1 1 40rem;
-    
-  
-}
-
-.detail-container .box:first-child{
-    text-align: center;
-    
-  
-}
-
-.detail-container .box img{
-    /* width: 80%; */
-    max-height: 40rem;
-    
-}
-
-
-
-.detail-container .box p{
-    font-size: 1.5rem;
-    color: #666;
-    line-height: 1.7;
-    text-transform: none;
-}
-
-.detail-container .box h1{
-    font-size: 3.2rem;
-    color: var(--black);
-
-}
-
-.detail-container .box .price{
-    font-size: 2.8rem;
-    color: var(--main);
-    text-transform: none;
-    padding-top: 0;
-    font-weight: bolder;
-    margin-top: 0;
-}
-
-.detail-container .box .price span{
-    font-size: 2.1rem;
-    color: rgb(141, 140, 140);
-    text-transform: none;
-    text-decoration: line-through;
-}
-
-
-.detail-container .box .info h5{ 
-    font-size: 1.5rem;
-    color: #666;
-    text-transform: none;
-    line-height: 2;
-}
-
-.detail-container .box .info span{ 
-    font-size: 1.5rem;
-    color: #888;
-    text-transform: none;
-    line-height: 2;
-}
-
-
-.detail-container .box .quantity{
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-}
-
-.detail-container .box input{ 
-    /* padding: 1.5rem .5rem; */
-    width: 5rem;
-    height: 4rem;
-    border: .1rem solid var(--main);
-    font-size: 2rem;
-    text-align: center;
-    margin-right: 1rem;
-}
-.detail-container .box a{
-    border: .1rem solid var(--main);
-    margin-top: 0;
-    text-transform: none;
-}
-
-.detail-container .box h3{
-    padding-top: 1rem;
-    font-size: 2.5rem;
-    color: var(--black);
-    margin-top: 1.5rem;
-}
-
-
-/* .detail-container .box {
-    padding-top:1rem;
-    font-size: 2.5rem;
-    color: var(--main);
-} */
-
-.produdtx{
-    margin-top: 20rem;
-    background-color: red;
-}
-
-
-/* ********************** Cart Page Css *****************************/
-/* 
-body table{
-    border-collapse: collapse;
-} */
-.cart-container{
-    margin-top: 0rem;
-}
-
-body .cart-container table {
-    padding: 2rem;
-    border-collapse: collapse;
-    width: 100%;
-    
-}
-.cart-container .box  th{
-    font-size: 1.6rem;
-    padding: .8rem 1rem;
-    color:#fff;
-    background: var(--main);
-    border-bottom: .3rem solid #ececec;
-}
-
-.cart-container .box  td{
-    font-size: 1.5rem;
-    padding: 1rem 1rem;
-    border-bottom: .1rem solid #ececec;
-    position: relative;
-}
-
-.product-info{
-    display: flex;    
-    align-items: center;
-    flex-wrap: wrap;  
-    text-transform: none;
-}
-
- .product-info img{
-    max-width: 5rem;
-    height: 5rem;
-    object-fit: cover;
-}
-
-.product-info h3{
-    font-size: 1.5rem;
-    color: #333;
-}
-
-.product-info span{
-    text-transform: none;
-    font-size: 1.4rem;
-}
-
-table ._amount{
-    color: var(--main);
-    font-weight: 550;
-}
-.cart-container .box td:last-child a{
-    font-size: 2rem;
-}
-
-.product-info .product_name{
-    white-space: nowrap; 
-    width: 20rem; 
-    overflow: hidden;
-    text-overflow: ellipsis; 
-    font-size: 1.5rem;
-    font-weight: 420;
-    text-transform: none;
-}
-.product-info .product_name a{
-    text-transform: none;
-}
-
-.cart-container ._checkout-container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-}
-
-.cart-container ._checkout-container .voucher{
-    padding: 2rem 0rem;
-}
-
-._checkout-container .voucher h4{
-    font-size: 2rem;
-    color: var(--black)
-}
-._checkout-container .voucher .box{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-._checkout-container .voucher input{
-    padding: .6rem 1rem ;
-
-    font-size: 1.5rem;
-    text-transform: none;
-    border: .1rem solid rgb(158, 157, 157);
-}
-
-._checkout-container .voucher button{
-    font-size: 1.2rem;
-    vertical-align: middle;
-    border-radius: 0;
-    margin-top: 0;
-}
-
-._checkout-container .checkout-box{
-    width: 40%;
-    padding: 3rem 0;
-}
-
-._checkout-container .checkout-box table{
-    border-top: .5rem solid var(--main);
-    width: 100%;
-  
-}
-
-
-.checkout-box table th{
-    font-size: 1.7rem;
-    padding: 1rem .5rem;
-    /* border-bottom: .1rem solid #ececec; */
-}
-
-.checkout-box table td{
-    font-size: 1.6rem;
-    font-weight: 410;
-    text-align: right;
-    text-transform: none;
-    /* border-bottom: .1rem solid #ececec; */
-}
-
-.checkout-box table .total_price{
-    color: var(--main);
-    font-size: 2rem;
-}
-
-.btn_checkout{
-    display: block;
-    margin-top: 1.5rem;
-    background-color: var(--main);
-    color:#fff;
-    font-size: 2rem;
-    text-align: center;
-    padding: .7rem .5rem;
-}
-
-.btn_checkout:hover{
-    background-color: #1c7731;
-    color:#fff;
-}
 
 /* ************************ Account Page CSS ************************ */
 .account-container{
@@ -1637,335 +1320,9 @@ table ._amount{
 
 
 
-/* ********************** Address Page CSS *********************** */
-
-._address .alert{
-    width: 50%;
-    margin: auto;
-    font-size: 1.6rem;
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-.box-address{
-    margin-bottom: 3rem;
-   
-}
-
-.box-address:first-child .card{
-    background-color: rgb(255, 187, 0);
-    
-}
-
-.box-address .card-header{
-    font-size: 2rem;
-    display: flex;
-    justify-content: space-between;
-    color: var(--black);
-    padding: 1rem .5rem;
-  
-}
-
-.box-address .card-header h3{
-    font-size: 2.2rem;
-}
-
-.box-address a{
-    color: var(--black);
-}
-
-.box-address .card-body h4{
-    font-size: 2rem;
-    color: #333;
-    line-height: 2;
-    text-transform: none;
-}
-
-.box-address .card-body{
-    padding-bottom: 3rem;
-    min-height: 15rem;
-}
-
-.box-address .card-body p{
-    font-size: 1.5rem;
-    color: grey;
-    padding-bottom: 2rem;
-    text-transform: none;
-}
-
-.box-address .card-body a{
-    background-color: var(--main);
-    color: #fff;
-    padding: 1rem 1.5rem;
-    font-size: 1.8rem;
-    
-}
-
-/* *************** Checkout Page CSS ********************* */
-
-.bill .box-info{
-    padding: 1rem 3rem;
-}
-
-.box-info label{
-    font-size: 1.5rem;
-    padding-top: 1rem ;
-    font-weight: 400    ;
-    padding-bottom: .5rem;
-    color: #333;
-}
-
-.bill .box-info small{
-    font-size: 1.5rem;
-    color: red;
-    padding-top: 1rem;
-}
-
-.box-info input,
-.box-info textarea{
-    padding: .8rem 1rem;
-    font-size: 1.5rem;
-    outline: none;
-    border: .1rem solid #ccc;
-}
-
-.box-info input:focus{
-    outline: none;
-    box-shadow:none !important;
-    border:.1rem solid #ccc !important;
-}
-
-.bill .box-bill{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-   padding: 1rem 2rem;
-}
-
-
-.box-info h3,
-.box-bill h3{
-   font-size: 2rem;
-   font-weight: bolder;
-   padding: 1rem 0;
-   text-transform: uppercase;
-   color: #555;
-   /* border-bottom: .2rem solid #ececec; */
-}
-.box-bill table{
-    width: 100%;
-    border-bottom: .2rem solid #ececec;
-}
-.box-bill table tr:first-child{
-    border-bottom: .2rem solid #ececec;
-}
-
-.box-bill table th:last-child,
-.box-bill table td:last-child{
-    text-align: right;
-}
-
-.box-bill table th,
-.box-bill table td{
-    font-size: 1.5rem;
-    padding: .8rem 0;
-   
-}
-
-.box-bill .checkout-payment{
-    margin-top: 2rem;
-    padding: 1rem;
-}
-
-.box-bill .checkout-payment label{
-    font-size: 1.5rem;
-    color: #222;
-    padding: .5rem 0;
-}
-
-.box-bill .checkout-payment input{
-    padding: .7rem;
-}
-
-.box-bill .checkout-payment .note{
-    font-size: 1.5rem;
-    padding: 1rem 0;
-    color: #444;
-}
-
-
 /* ****************** Order Manage Page *************************** */
 
-._order .order-container .box{
-    /* padding: 1rem 2rem; */
-   
-    border-radius: .5rem;
-}
 
-._order .order-container .box table{
-    width: 100%;
-    /* padding: 10rem;
-     */
-}
- 
- .order-container table th{
-    font-size: 1.8rem;
-    color:var(--black);
-    font-weight: 450;
-    padding: .5rem 0rem;
-}
-
-._order .order-container table tr:first-child{
-    border-bottom: .3rem solid #ececec;
-    
-}
-
-.order-container table td{
-    font-size: 1.8rem;
-    color: #555;
-    padding: 1rem 0;
-    border-bottom: .1rem solid #ececec;
-}
-
-.order-container table img{
-    width: 100%;
-    max-width: 8rem;
-}
-
-.order-container table a{
-    color: #fff;
-    font-size: 1.2rem;
-    padding: .5rem 1.5rem;
-    font-family: 400;
-    text-transform: lowercase;
-    background-color: var(--main);
-    border-radius: 1rem;
-    cursor: pointer;
-}
- 
-.order-container table a:first-child:hover{
-    color:#fff;
-    background-color: #1c7731;
-
-}
-.order-container table .cancel_order:hover{
-    color:#fff;
-    background-color:  #750f0a;
-
-}
-
-.order-container .total{
-    color: var(--main);
-    font-weight: 500;
-}
-
-/* navigation css */
-.order-container .navigation ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    padding: 1rem;
-    margin-top: 2rem;
-}
-
-.order-container .navigation a{
-    border: .1rem solid #ececec;
-    padding: .5rem 1.5rem;
-    color:var(--black);
-    font-size: 1.7rem;
-    
-}
-
-.order-container .navigation a:hover{
-    border: .1rem solid var(--main);
-    color:var(--main);
-}
-
-._order>a{
-    border-radius: 0;
-    font-size: 1.5rem;
-    color:#192a56;
-    border-color: #192a56;
-}
-._order>a:hover{
-    border-color: var(--main);
-}
-
-._order .search-box input{
-    font-size: 1.5rem;
-    width: 100%;
-    padding-right: 4rem;
-    color: var(--black);
-}
-
-._order .sort i{
-    position: absolute;
-    right: 2rem;
-    font-size: 2rem;
-    color: var(--black);
-}
-
-
-/* ****************** Order Detail Page CSS ************************ */
-
-.orderDetail-container form{
-  /* background-color: #ececec; */
-  box-shadow: var(--box-shadow);
-    padding: 1rem;
-}
-
-.orderDetail-container form input,
-.orderDetail-container form textarea{
-    font-size: 1.6rem;
-    border: .1rem solid #ececec;
-    resize: none;
-    text-transform: none;
-}
-
-.orderDetail-container form input:last-child{
-    color:var(--main);
-    font-weight: 600;
-}
-.orderDetail-container form input:focus,
-.orderDetail-container form textarea:focus{
-    outline: none;
-    box-shadow:none !important;
-    border:.1rem solid #ccc !important;
-
-}
-.orderDetail-container form label{
-    font-size: 1.6rem;
-    font-weight: 500;
-    text-transform: none;
-    padding: 1rem 0rem 0rem 0rem;
-}
-
-/* Table  */
-.orderDetail-container table td:first-child{
-    max-width: 2.5rem;
-}
-.orderDetail-container table th{
-    border-bottom: .5rem solid #eaeaea;
-}
-
-.orderDetail-container table th,
-.orderDetail-container table td{
-    font-size: 1.7rem;
-    height: 2rem;
-    padding: 1rem;
-}
-.orderDetail-container table td h4{
-    text-transform: none;
-}
-
-.orderDetail-container table td img{
-    width: 100%;
-    max-width: 8rem;
-}
-
-._orderDetail>a{
-    border-radius: 0;
-    font-size: 1.5rem;
-}
 
 
 /* ****************** Login Page CSS *************************** */
@@ -2103,7 +1460,7 @@ body ._login {
     font-weight: 500;
 }
 
-.login-container .box form .btn{
+.login-container .box form ._btn{
     width: 100%;
 }
 
@@ -2151,121 +1508,6 @@ body ._login {
 body .login-container .login_orther a:hover{
     color: #ffff;
 }
-
-/* ************ Profile Page CSS *************** */
-
-._profile{
-    margin-top: 5rem;
-}
-
-.product-container{
-    justify-content: space-between;
-}
-
-.profile-container .box-info{
-    text-align: center;
-    box-shadow: var(--box-shadow);
-    padding: 2rem 1rem;
-    max-height: 65rem;
-}
-
-.profile-container .box-info h1{
-    padding: 1rem 0;
-    font-weight: 600;
-    font-size: 2rem;
-    text-transform: uppercase;
-}
-.profile-container .box-info img{
-    border-radius: 50%;
-    width: 60%;
-    max-width: 70rem;
-    margin: 1rem;
-   border: 1rem solid #ececec;
-}
-
-.profile-container .box-info .info{
-    margin: 1rem 0;
-    border-top: .5rem solid #ececec;
-    padding: 2rem 1rem;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    flex-wrap: wrap;
-}
-
-.profile-container .box-info .info span{
-    font-size: 1.8rem;
-    text-transform: none;
-    color: var(--light-color);
-    padding: .5rem .5rem;
-}
-
-.profile-container .box-info .info span small{
-    color: goldenrod;
-}
-
-.profile-container .box-info .info span i{
-    margin-right: .5rem;
-    font-size: 2rem;
-}
-
-
-.profile-container .box-order{
-    text-align: center;
-    box-shadow: var(--box-shadow);
-    padding: 2rem 1rem;
-    margin-left: 3rem;
-    /* max-height: 70rem; */
-}
-
-.profile-container .box-order table{
-    width: 100%;
-    margin-top: 2rem;
-    font-size: 1.5rem;
-}
-
-.profile-container .box-order table th{
-    padding: 1rem .5rem;
-    border-bottom: .3rem solid #ececec;
-}
-
-.profile-container .box-order table td{
-    border-bottom: .1rem solid #ececec;
-    padding: .5rem 0;
-    cursor: pointer;
-}
-
-.profile-container .box-order table tr:hover{
-    background-color: #ececec;
-}
-
-.profile-container .box-order table td img{
-    max-width: 5rem;
-}
-.profile-container .box-order table td:last-child{
-    color: var(--main);
-    font-weight: 500;
-}
-
-.box-order .navigation{
-    display: flex;
-    justify-content: center;
-    font-size: 1.5rem;
-    margin-top: 2rem;
-}
-
-.box-order .navigation a{
-    border: .1rem solid #ececec;
-    padding: 1rem .8rem;
-}
-
-
-
-
-
-
-
-
 
 
 
